--- a/module/Usuario/view/usuario/usuario/index.phtml
+++ b/module/Usuario/view/usuario/usuario/index.phtml
@@ -1,29 +1,43 @@
+<script type="text/javascript">
+	function getNomePermissao(enumPermissao) {
+        if (enumPermissao == 'administrador') {
+			return 'Administrador';
+		} else if (enumPermissao == 'coordenador') {
+			return 'Coordenador';
+		} else if (enumPermissao == 'especialista') {
+			return 'Especialista';
+		} else if (enumPermissao == 'lider_missao') {
+			return 'Líder da Missão';
+		}
+	}
+</script>
+
 <?php
 $title = 'Usuários cadastrados';
 $this->headTitle($title);
 ?>
 <h1><?php echo $this->escapeHtml($title); ?></h1>
 <p>
-    <a href="<?php echo $this->url('usuario', array('action'=>'add'));?>">Criar novo usuário</a>
+    <a class='btn btn-default' href="<?php echo $this->url('usuario', array('action'=>'add'));?>">Criar novo usuário</a>
 </p>
 
 <table class="table">
 <tr>
     <th>Login</th>
-	<th>Permissao</th>
 	<th>Nome</th>
 	<th>Email</th>
+	<th>Permissao</th>
     <th>&nbsp;</th>
 </tr>
 <?php foreach ($usuarios as $usuario) : ?>
 <tr>
     <td><?php echo $this->escapeHtml($usuario->login);?></td>
-	<td><?php echo $this->escapeHtml($usuario->permissao);?></td>
 	<td><?php echo $this->escapeHtml($usuario->nome);?></td>
 	<td><?php echo $this->escapeHtml($usuario->email);?></td>
+	<td><?php echo $this->escapeHtml($usuario->permissaoNome);?></td>
     <td>
         <a href="<?php echo $this->url('usuario',
-            array('action'=>'edit', 'id' => $usuario->id));?>">Editar</a>
+            array('action'=>'edit', 'id' => $usuario->id));?>">Editar</a> | 
         <a href="<?php echo $this->url('usuario',
             array('action'=>'delete', 'id' => $usuario->id));?>">Remover</a>
     </td>
