--- a/module/SanAuth/view/san-auth/success/index.phtml
+++ b/module/SanAuth/view/san-auth/success/index.phtml
@@ -1,4 +1,6 @@
-Login Success.
+<h1>Login efetuado com sucesso!</h1>
 <br />
-
+Olá, <?php echo $usuario->nome; ?>.
+<br />
+<br />
 <a href="<?php echo $this->url('login/process', array('action'=>'logout')); ?>">Logout</a>
