--- a/module/Usuario/view/usuario/usuario/add.phtml
+++ b/module/Usuario/view/usuario/usuario/add.phtml
@@ -21,7 +21,7 @@ foreach ($form as $element) :?>
 		?>
 		<?php if ($name == 'id') { ?>
 			<div class="hidden"><?php echo $this->formElement($element); ?></div>
-		<?php } else if ($type == 'select') {
+		<?php } else if ($type == 'select' || $type == 'checkbox') {
 			echo $this->formRow($form->get($name)); ?>
 		<?php } else if ($name == 'submit') { ?>
 			<input class='btn btn-default' name='submit' type='submit' value='<?php echo $value ?>'>
