Adicao do plugin comum aos controllers, e divisao do menu pelas permissoes

--- a/module/Application/view/application/forbidden/index.phtml
+++ b/module/Application/view/application/forbidden/index.phtml
@@ -3,4 +3,4 @@
 
 <p>Você não possui a permissão necessária para visualizar esta página.</p>
 
-<a href="<?php echo $this->url('login/process', array('action'=>'login')); ?>">Retornar ao menu principal</a>
+<a href="<?php echo $this->url('login/process', array('action'=>'login')); ?>">Retornar ao perfil</a>
