--- a/module/SanAuth/view/san-auth/success/index.phtml
+++ b/module/SanAuth/view/san-auth/success/index.phtml
@@ -1,6 +1,7 @@
 <h1>Login efetuado com sucesso!</h1>
 <br />
-Olá, <?php echo $usuario->nome; ?>.
+Olá, <?php echo $nome_usuario; ?>.
 <br />
 <br />
+
 <a href="<?php echo $this->url('login/process', array('action'=>'logout')); ?>">Logout</a>
