Atualizacao do codigo depois do rebase

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -76,7 +76,7 @@
 						<li <?php if (strpos($route,'tiporecurso') !== false): ?>class="active"<?php endif ?>>
 							<a href="<?php echo $this->basePath('tiporecurso') ?>"><?php echo $this->translate('Tipo de recurso') ?></a>
 						</li>
-			
+						<?php endif ?>
 						
 						<?php if ($isAutenticado): ?>
 						<li>
