--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -51,17 +51,17 @@
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav">
 						<li <?php if ($route == '' || strpos($route,'application') !== false || strpos($route,'index') !== false): ?>class="active"<?php endif ?>>
-							<a href="<?php echo $this->url('home'); ?>"><img src="<?php echo $this->basePath('img/zf2-logo.png') ?>" alt="Zend Framework 2"/>&nbsp;<?php echo $this->translate('Home') ?></a>
+							<a href="<?php echo $this->url('home'); ?>"><span class="glyphicon glyphicon-home"></span>&nbsp;&nbsp;<?php echo $this->translate('Home') ?></a>
 						</li>
 						
 						<?php if ($isAutenticado): ?>
-						<li <?php if (strpos($route,'success') !== false): ?>class="active"<?php endif ?>>
-							<a href="<?php echo $this->url('login') ?>"><?php echo $this->translate('Perfil') ?></a>
+						<li <?php if (strpos($route,'success') !== false || strpos($route,'editpassword') !== false): ?>class="active"<?php endif ?>>
+							<a href="<?php echo $this->url('login') ?>"><span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;<?php echo $this->translate('Perfil') ?></a>
 						</li>
 						<?php endif ?>
 						
 						<?php if ($isAdmin): ?>
-						<li <?php if (strpos($route,'usuarios') !== false): ?>class="active"<?php endif ?>>
+						<li <?php if (strpos($route,'usuarios') !== false && strpos($route,'editpassword') === false): ?>class="active"<?php endif ?>>
 							<a href="<?php echo $this->basePath('usuarios') ?>"><?php echo $this->translate('Usuários') ?></a>
 						</li>
 						<?php endif ?>
@@ -77,9 +77,11 @@
 							<a href="<?php echo $this->basePath('tiporecurso') ?>"><?php echo $this->translate('Tipo de recurso') ?></a>
 						</li>
 						<?php endif ?>
+					</ul>
 						
+					<ul class="nav navbar-nav navbar-right">
 						<?php if ($isAutenticado): ?>
-						<li>
+						<li <?php if (strpos($route,'logout') !== false): ?>class="active"<?php endif ?>>
 							<a href="<?php echo $this->url('login/process', array('action'=>'logout')); ?>"><?php echo $this->translate('Logout') ?></a>
 						</li>
 						<?php else: ?>
