--- a/module/Usuario/view/usuario/usuario/edit.phtml
+++ b/module/Usuario/view/usuario/usuario/edit.phtml
@@ -40,6 +40,7 @@ foreach ($form as $element) :?>
 	</div>
 <?php 
 endforeach;
+echo $this->form()->closeTag();
 
 /*
 echo $this->form()->openTag($form);
