--- a/module/Usuario/view/usuario/usuario/editdados.phtml
+++ b/module/Usuario/view/usuario/usuario/editdados.phtml
@@ -1,5 +1,5 @@
 <?php
-$title = 'Editar tipo de missão';
+$title = 'Editar dados cadastrais';
 $this->headTitle($title);
 ?>
 <h1><?php echo $this->escapeHtml($title); ?></h1>
@@ -7,9 +7,9 @@ $this->headTitle($title);
 <?php
 $form = $this->form;
 $form->setAttribute('action', $this->url(
-	'tipomissao',
+	'usuario',
 	array(
-		'action' => 'edit',
+		'action' => 'editdados',
 		'id'     => $this->id,
 	)
 ));
@@ -30,8 +30,6 @@ foreach ($form as $element) :?>
 		<?php } else if ($name == 'submit') { ?>
 			<input type='submit' class='btn btn-default' name='submit' value='<?php echo $value ?>'>
 			<input class='btn' name='submit' type='submit' value='Cancelar'>
-		<?php } else if ($type == 'select') {
-			echo $this->formRow($form->get($name)); ?>
 		<?php } else if ($label != '') { ?>
 			<label class="control-label"><?php echo $label ?></label>
 			<input class='form-control' name='<?php echo $name ?>' type='<?php echo $type ?>'
