--- a/module/Usuario/view/usuario/usuario/editpassword.phtml
+++ b/module/Usuario/view/usuario/usuario/editpassword.phtml
@@ -1,5 +1,5 @@
 <?php
-$title = 'Editar tipo de missão';
+$title = 'Editar senha';
 $this->headTitle($title);
 ?>
 <h1><?php echo $this->escapeHtml($title); ?></h1>
@@ -7,9 +7,9 @@ $this->headTitle($title);
 <?php
 $form = $this->form;
 $form->setAttribute('action', $this->url(
-	'tipomissao',
+	'usuario',
 	array(
-		'action' => 'edit',
+		'action' => 'editpassword',
 		'id'     => $this->id,
 	)
 ));
@@ -42,15 +42,12 @@ foreach ($form as $element) :?>
 endforeach;
 echo $this->form()->closeTag();
 
-/*
-echo $this->form()->openTag($form);
-echo $this->formHidden($form->get('id'));
-echo $this->formRow($form->get('login'));
-echo $this->formRow($form->get('senha'));
-echo $this->formRow($form->get('permissao'));
-echo $this->formRow($form->get('nome'));
-echo $this->formRow($form->get('email'));
-echo $this->formSubmit($form->get('submit'));
-echo $this->form()->closeTag();
-*/
+if ($this->messages){
+    echo '<ul>';
+    foreach($this->messages as $message)
+    {
+        echo '<li>'.$message.'</li>';
+    }
+    echo '</ul>';
+}
 ?>
