--- a/module/Missao/view/missao/missao/alocarrecursos.phtml
+++ b/module/Missao/view/missao/missao/alocarrecursos.phtml
@@ -18,31 +18,20 @@ $this->headTitle($title);
 ?>
 <h1><?php echo $this->escapeHtml($title);?></h1>
 
+    <?php 
+    $idMissao = $this->idMissao;
+    $nomeAction = "/PCS2034/public/missao/alocarrecursos/";
+    ?>
+<?php echo $this->total; 
+    $count = 0 ; ?>
+<form action=<?php echo $nomeAction. $idMissao; ?> method="POST" name="alocarrecursos">
+<input name="total" class="hidden" value=<?php echo $this->total; ?>>
 <table class="table">
 <tr>
     <th>Nome</th>
     <th>Quantidade</th>
     <th>&nbsp;</th>
 </tr>
-
-<tr>
-<form action="/PCS2034/public/tipomissao/alocarrecursos/1" method="POST" name="alocarrecursos">
-
-<?php foreach ($tipoRecursos as $tipoRecurso) : ?>
-<tr>
-    <td><?php echo $this->escapeHtml($tipoRecurso->nome);?></td>
-</tr>
-
-<tr>
-
-</tr>
-
-</form>
-
-</tr>
-
-
-
 
 <?php 
 /*
@@ -61,12 +50,43 @@ $this->form()->prepare();
     echo $this->form()->closeTag();
 */
 ?>
+<tr>
 
 
+<?php foreach ($tipoRecursos as $tipoRecurso) : ?>
+<tr>
+<td>
+<?php echo $this->escapeHtml($tipoRecurso->nome);?>
+</td>
+<?php
+$idtipoRecurso = $tipoRecurso->id;
+?>
+<td>
+    <?php $nome = "quantidade"; 
+    ?>
+    <?php $idtipo = "id";
+        $count = $count + 1; 
+    ?>
+    <input name=<?php echo $idtipo. $count; ?> class="hidden" value=<?php echo $idtipoRecurso; ?>>
+    <input name=<?php echo $nome. $count; ?> type="text" value="0">
 
+</td>
+</tr>
+<?php 
+endforeach;
+?>
+
+
+</tr>
+<tr>
+<td>
+<input type="submit" class="btn btn-default" name="submit" value="Alocar recursos">
+</td>
+</tr>
 
 </table>
 
+</form>
 
 
 
