parte da missao

--- a/module/Missao/view/missao/missao/alocarrecursos.phtml
+++ b/module/Missao/view/missao/missao/alocarrecursos.phtml
@@ -82,6 +82,10 @@ endforeach;
 <td>
 <input type="submit" class="btn btn-default" name="submit" value="Alocar recursos">
 </td>
+
+<td>
+<a href="/PCS2034/public/missao/" class="btn btn-default" >Cancelar</a> 
+</td>
 </tr>
 
 </table>
