Padronizaçoes do codigo

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -60,10 +60,21 @@
 						</li>
 						<?php endif ?>
 						
-						<?php if ($isAdmin): ?>
-						<li <?php if (strpos($route,'usuarios') !== false && strpos($route,'editpassword') === false && strpos($route,'editdados') === false): ?>class="active"<?php endif ?>>
-							<a href="<?php echo $this->basePath('usuarios') ?>"><?php echo $this->translate('Usuários') ?></a>
+						<?php if ($isCoordenador): ?>
+						<li <?php if (strpos($route,'acidente') !== false): ?>class="active"<?php endif ?>>
+							<a href="<?php echo $this->basePath('acidente') ?>"><?php echo $this->translate('Acidentes') ?></a>
 						</li>
+						<?php endif ?>
+						
+						<?php if ($isAdmin || $isCoordenador): ?>
+						<li <?php if (strpos($route,'missao') !== false && strpos($route,'protocolo') === false && strpos($route,'status') === false && strpos($route,'tipo') === false): ?>class="active"<?php endif ?>>
+							<a href="<?php echo $this->basePath('missao') ?>"><?php echo $this->translate('Missões') ?></a>
+						<?php endif ?>
+						
+						<?php if ($isLider): ?>
+						<li <?php if (strpos($route,'missaoprotocolo') !== false || strpos($route,'status') !== false): ?>class="active"<?php endif ?>>
+							<a href="<?php echo $this->url('missao',array('action'=>'missaoprotocolo'));?>"><?php echo $this->translate('Atualizar status da missão') ?></a>
+						</li>						
 						<?php endif ?>
 						
 						<?php if ($isAdmin): ?>
@@ -77,22 +88,11 @@
 							<a href="<?php echo $this->basePath('tiporecurso') ?>"><?php echo $this->translate('Tipo de recurso') ?></a>
 						</li>
 						<?php endif ?>
-
-						<?php if ($isAdmin || $isCoordenador): ?>
-						<li <?php if (strpos($route,'missao') !== false): ?>class="active"<?php endif ?>>
-							<a href="<?php echo $this->basePath('missao') ?>"><?php echo $this->translate('Missões') ?></a>
-						<?php endif ?>
-
-						<?php if ($isCoordenador): ?>
-						<li <?php if (strpos($route,'acidente') !== false): ?>class="active"<?php endif ?>>
-							<a href="<?php echo $this->basePath('acidente') ?>"><?php echo $this->translate('Acidentes') ?></a>
-						</li>
-						<?php endif ?>
 						
-						<?php if ($isLider): ?>
-						<li <?php if (strpos($route,'missaoprotocolo') !== false || strpos($route,'status') !== false): ?>class="active"<?php endif ?>>
-							<a href="<?php echo $this->url('missao',array('action'=>'missaoprotocolo'));?>"><?php echo $this->translate('Atualizar status da missão') ?></a>
-						</li>						
+						<?php if ($isAdmin): ?>
+						<li <?php if (strpos($route,'usuarios') !== false && strpos($route,'editpassword') === false && strpos($route,'editdados') === false): ?>class="active"<?php endif ?>>
+							<a href="<?php echo $this->basePath('usuarios') ?>"><?php echo $this->translate('Usuários') ?></a>
+						</li>
 						<?php endif ?>
 						
 						<?php if ($isAutenticado): ?>
