--- a/module/Acidente/view/acidente/acidente/index.phtml
+++ b/module/Acidente/view/acidente/acidente/index.phtml
@@ -52,7 +52,7 @@ $this->headTitle($title);
     <td><?php echo $this->escapeHtml($acidente->obstrucao);?></td>
     <td>
         <a href="<?php echo $this->url('acidente',
-            array('action'=>'getAcidenteInfo', 'id' => $acidente->id));?>">Mais Informações</a>
+            array('action' => 'info', 'id' => $acidente->id));?>">Mais Informações</a>
     </td>
 </tr>
 <?php endforeach; ?>
