--- a/module/Missao/view/missao/missao/detalhes.phtml
+++ b/module/Missao/view/missao/missao/detalhes.phtml
@@ -1,21 +1,5 @@
-<script type="text/javascript">
-    function getNomePermissao(enumPermissao) {
-        if (enumPermissao == 'administrador') {
-            return 'Administrador';
-        } else if (enumPermissao == 'coordenador') {
-            return 'Coordenador';
-        } else if (enumPermissao == 'especialista') {
-            return 'Especialista';
-        } else if (enumPermissao == 'lider_missao') {
-            return 'Líder da Missão';
-        }
-    }
-</script>
-
-
-
 <?php
-$title = 'Detalhes de missão ';
+$title = 'Detalhes da missão ';
 $this->headTitle($title);
 ?>
 <h1><?php echo $this->escapeHtml($title); ?></h1>
@@ -23,77 +7,43 @@ $this->headTitle($title);
 <table class="table">
 	<tr>
 		<td>Nome</td>
-		<td>	
-			<?php
-			 echo $this->escapeHtml($Missao->nome); 
-			 ?>
-		</td>
+		<td><?php echo $this->escapeHtml($Missao->nome); ?></td>
 	</tr>
-	<tr>
 	<tr>
 		<td>Tipo de missao</td>
-		<td>	
-			<?php
-			 echo $this->escapeHtml($TipoMissao->nome); 
-			 ?>
-		</td>
+		<td><?php echo $this->escapeHtml($TipoMissao->nome); ?></td>
 	</tr>
-	<td>Status</td>
-		<td>	
-        <?php if ($Missao->status == "andamento"){ ?>
-        <?php echo $this->escapeHtml("Em andamento");?>
-        <?php } ?>
-        <?php if ($Missao->status == "concluida"){ ?>
-        <?php echo $this->escapeHtml("Concluída");?>
-        <?php } ?>
-		</td>
-	</tr>
-
 	<tr>
 		<td>Protocolo</td>
-		<td>	
-			<?php
-			 echo $this->escapeHtml($Missao->protocolo); 
-			 ?>
-		</td>
+		<td><?php echo $this->escapeHtml($Missao->protocolo); ?></td>
+	</tr>
+	<tr>
+		<td>Status</td>
+		<td><?php echo $this->escapeHtml($Missao->statusNome); ?></td>
 	</tr>
 
 </table>
 
 <?php
-if(count($recursosLista)>0){
+if (count($recursosLista) > 0) {
 ?>
 <table class="table">
 <tr>
     <th>Recurso</th>
     <th>Quantidade</th>
     <th>&nbsp;</th>
-
 </tr>
 
-<?php
-foreach ($recursosLista as $recurso) : ?>
+<?php foreach ($recursosLista as $recurso) : ?>
 <tr>
-	<td>
-	<?php
-	 echo $this->escapeHtml($recurso->nome); 
-	 ?>
-	</td>
-	<td>
-	<?php
-	 echo $this->escapeHtml($recurso->quantidade); 
-	 ?>
-	</td>
+	<td><?php echo $this->escapeHtml($recurso->nome); ?></td>
+	<td><?php echo $this->escapeHtml($recurso->quantidade); ?></td>
 </tr>
-
- <?php
-endforeach;
-?>
-
+<?php endforeach; ?>
 </table>
+
 <?php
-}else{
-	echo $this->escapeHtml("Não há recursos alocados para essa missão."); 
+} else {
+	echo $this->escapeHtml("Não há recursos alocados para esta missão."); 
 }
 ?>
-
