--- a/module/Missao/view/missao/missao/index.phtml
+++ b/module/Missao/view/missao/missao/index.phtml
@@ -35,7 +35,7 @@ $this->headTitle($title);
 	<td><?php echo $this->escapeHtml($Missao->statusNome);?></td>
 	<?php
 	if ($isCoordenador) {
-		if ($Missao->recursosAlocados == "nao") {
+		if (!$Missao->recursosAlocados) {
 	?>
 	<td>
 		<a href="<?php echo $this->url('missao', array('action'=>'alocarrecursos', 'id' => $Missao->id));?>">Alocar recursos</a> 
