tentando colocar validacao na alocacao de recursos

--- a/module/Missao/view/missao/missao/alocarrecursos.phtml
+++ b/module/Missao/view/missao/missao/alocarrecursos.phtml
@@ -1,5 +1,34 @@
 
 
+<script type="text/javascript">
+    alert( "ready!" );
+
+$(document).ready(function() {
+    alert( "ready!" );
+});
+
+function validate(){
+    int total = document.getElementByName("total").val();
+    alert(total);
+    int i;
+    String nameQ;
+
+    for(i=1; i<=total;i++){
+        nameQ = "quantidade" + i;
+
+        if(!preg_match("/[^0-9\.\-\Ä\ä\Ö\ö\Ü\ü\ ]+$/s",document.getElementByName(nameQ).val())) {
+            return TRUE; 
+        }else{
+            alert("Esta erradi!");
+            return FALSE;
+        } 
+    }
+}
+
+</script>
+
+
+
 <?php
 $title = 'Alocar recursos';
 $this->headTitle($title);
@@ -12,7 +41,7 @@ $this->headTitle($title);
     ?>
 <?php  
     $count = 0 ; ?>
-<form action=<?php echo $nomeAction. $idMissao; ?> method="POST" name="alocarrecursos">
+<form action=<?php echo $nomeAction. $idMissao; ?> method="POST" name="alocarrecursos" onsubmit="validate()">
 <input name="total" class="hidden" value=<?php echo $this->total; ?>>
 
 <table class="table">
