--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -61,13 +61,13 @@
 						<?php endif ?>
 						
 						<?php if ($isCoordenador || $isEspecialista): ?>
-						<li <?php if (strpos($route,'acidente') !== false): ?>class="active"<?php endif ?>>
+						<li <?php if (strpos($route,'acidente') !== false && strpos($route,'relatorio') === false): ?>class="active"<?php endif ?>>
 							<a href="<?php echo $this->basePath('acidente') ?>"><?php echo $this->translate('Acidentes') ?></a>
 						</li>
 						<?php endif ?>
 						
 						<?php if ($isCoordenador || $isEspecialista): ?>
-						<li <?php if (strpos($route,'missao') !== false && strpos($route,'protocolo') === false && strpos($route,'status') === false && strpos($route,'tipo') === false): ?>class="active"<?php endif ?>>
+						<li <?php if (strpos($route,'missao') !== false && strpos($route,'protocolo') === false && strpos($route,'status') === false && strpos($route,'tipo') === false && strpos($route,'relatorio') === false): ?>class="active"<?php endif ?>>
 							<a href="<?php echo $this->basePath('missao') ?>"><?php echo $this->translate('Missões') ?></a>
 						<?php endif ?>
 						
@@ -93,6 +93,11 @@
 						<li <?php if (strpos($route,'usuarios') !== false && strpos($route,'editpassword') === false && strpos($route,'editdados') === false): ?>class="active"<?php endif ?>>
 							<a href="<?php echo $this->basePath('usuarios') ?>"><?php echo $this->translate('Usuários') ?></a>
 						</li>
+						<?php endif ?>
+						
+						<?php if ($isCoordenador): ?>
+						<li <?php if (strpos($route,'relatorio') !== false): ?>class="active"<?php endif ?>>
+							<a href="<?php echo $this->basePath('relatorio') ?>"><?php echo $this->translate('Relatórios') ?></a>
 						<?php endif ?>
 						
 						<?php if ($isAutenticado): ?>
