--- a/module/Relatorio/view/relatorio/relatorio/acidentes.phtml
+++ b/module/Relatorio/view/relatorio/relatorio/acidentes.phtml
@@ -1,23 +1,32 @@
 <?php
-$title = 'Acidentes cadastrados';
+$title = 'Relatório de acidentes';
 $this->headTitle($title);
 $this->headLink()->appendStylesheet('/css/datepicker.css');
 $this->headScript()->prependFile('/js/bootstrap-datepicker.js');
 ?>
+<h1><?php echo $this->escapeHtml($title);?></h1>
 
-<h1><?php echo $this->escapeHtml($title); ?></h1>
-<p>
-    <a class='btn btn-default' href="<?php echo $this->url('acidente', array('action'=>'add'));?>">Adicionar acidente</a>
-</p>
+<?php
+	$dataDe = $this->dataDe;
+	if (isset($dataDe) && $dataDe != 'Início') {
+		$dataDe = date('d/m/Y', strtotime($dataDe));
+	}
+	
+	$dataAte = $this->dataAte;
+	if (isset($dataAte) && $dataAte != 'Agora') {
+		$dataAte = date('d/m/Y', strtotime($dataAte));
+	}
+	
+	$dados = $this->dados;
+?>
 
 <hr class="divider">
-
 <div class="span4 collapse-group">
-	<h3><?php echo $this->escapeHtml('Filtros de busca');?></h3>
+	<h3><?php echo $this->escapeHtml('Seleção do período');?></h3>
 	<div class="collapse" id="viewdetails">
-	<?php
+		<?php
 		$form = $this->form;
-		$form->setAttribute('action', $this->url('acidente', array('action' => 'index')));
+		$form->setAttribute('action', $this->url('relatorio', array('action' => 'acidentes')));
 		$form->setAttribute('role', 'form');
 		$form->prepare();
 
@@ -54,50 +63,22 @@ $this->headScript()->prependFile('/js/bootstrap-datepicker.js');
 	</script>
 	<p><a class="btn" data-toggle="collapse" data-target="#viewdetails">Mostrar/Esconder &raquo;</a></p>
 </div>
-
 <hr class="divider">
 
+<h3><?php echo $this->escapeHtml('Período selecionado:');?></h3>
+<h4><?php echo $this->escapeHtml($dataDe.' até '.$dataAte);?></h4>
 
-<?php
-	$isAutenticado = isset($permissao) && $permissao;
-	$isAdmin = $isAutenticado && $permissao == 'administrador';
-	$isCoordenador = $isAutenticado && ($isAdmin || $permissao == 'coordenador');
-?>
+<br />
 
 <table class="table">
-<tr>
-	<th>Data</th>
-    <th>Localização</th>
-	<th>Descrição</th>
-	<th>Data</th>
-
-    <th>&nbsp;</th>
-</tr>
-<?php foreach ($acidentes as $acidente) : ?>
-<tr>
-	<td><?php echo $this->escapeHtml(date('d/m/Y', strtotime($acidente->data)));?></td>
-    <td><?php echo $this->escapeHtml($acidente->localizacao);?></td>
-	<td><?php echo $this->escapeHtml($acidente->descricao);?></td>
-
-	<td><?php echo $this->escapeHtml(date('d/m/Y', strtotime($acidente->data)));?></td>
-     <?php
-	if ($isCoordenador) {
-		if (!$missao->recursosAlocados) {
-	?>
-	<td>
-		<a href="<?php echo $this->url('missao', array('action'=>'alocarrecursos', 'id' => $missao->id));?>">Alocar recursos</a> 
-	</td>
-	<?php } else { ?>
-		<td></td>
-	<?php
-		} 
-	}
-	?>
-
-    <td>
-        <a href="<?php echo $this->url('acidente',
-            array('action' => 'info', 'id' => $acidente->id));?>">Mais Informações</a>
-    </td>
-</tr>
-<?php endforeach; ?>
+<?php foreach($dados as $dado => $valor) { ?>
+	<tr>
+		<td><?php echo $this->escapeHtml($dado); ?></td>
+		<td><?php echo $this->escapeHtml($valor); ?></td>
+	</tr>
+<?php } ?>
 </table>
+
+<ul class="nav nav-pills">
+	<li class="active"><a href="<?php echo $this->url('relatorio', array('action'=>'index')); ?>">Voltar</a></li>
+</ul>
