--- a/module/SanAuth/view/san-auth/success/index.phtml
+++ b/module/SanAuth/view/san-auth/success/index.phtml
@@ -1,7 +1,4 @@
-<h1>Autenticado com sucesso!</h1>
-<br />
-Olá, <?php echo $usuario->nome; ?>.
-<br />
+<h3>Olá, <?php echo $usuario->nome; ?>.</h3>
 <br />
 
 <ul class="nav nav-pills">
