--- a/module/Relatorio/view/relatorio/relatorio/sistema.phtml
+++ b/module/Relatorio/view/relatorio/relatorio/sistema.phtml
@@ -1,8 +1,84 @@
 <?php
 $title = 'Relatório do sistema';
 $this->headTitle($title);
+$this->headLink()->appendStylesheet('/css/datepicker.css');
+$this->headScript()->prependFile('/js/bootstrap-datepicker.js');
 ?>
 <h1><?php echo $this->escapeHtml($title);?></h1>
+
+<?php
+	$dataDe = $this->dataDe;
+	if (isset($dataDe) && $dataDe != 'Início') {
+		$dataDe = date('d/m/Y', strtotime($dataDe));
+	}
+	
+	$dataAte = $this->dataAte;
+	if (isset($dataAte) && $dataAte != 'Agora') {
+		$dataAte = date('d/m/Y', strtotime($dataAte));
+	}
+	
+	$dados = $this->dados;
+?>
+
+<hr class="divider">
+<div class="span4 collapse-group">
+	<h3><?php echo $this->escapeHtml('Seleção do período');?></h3>
+	<div class="collapse" id="viewdetails">
+		<?php
+		$form = $this->form;
+		$form->setAttribute('action', $this->url('relatorio', array('action' => 'sistema')));
+		$form->setAttribute('role', 'form');
+		$form->prepare();
+
+		echo $this->form()->openTag($form);
+		foreach ($form as $element) :?>
+			<div class="form-group">
+				<?php
+					$type = $element->getAttribute('type');
+					$name = $element->getAttribute('name'); 
+					$label = $element->getLabel();
+					$value = $element->getValue();
+				?>
+				<?php if ($name == 'id') { ?>
+					<div class="hidden"><?php echo $this->formElement($element); ?></div>
+				<?php } else if ($type == 'select' || $type == 'checkbox') {
+					echo $this->formRow($form->get($name)); ?>
+				<?php } else if ($name == 'submit') { ?>
+					<input class='btn btn-default' name='submit' type='submit' value='<?php echo $value ?>'>
+				<?php } else if ($label != '') { ?>
+					<label class="control-label"><?php echo $label ?></label>
+					<input class='form-control' name='<?php echo $name ?>' type='<?php echo $type ?>'>
+				<?php } ?> 
+			</div>
+		<?php 
+		endforeach;
+		echo $this->form()->closeTag();
+		?>
+	</div>
+	<script>
+		$(function() {
+			$('input[name=dataDe]').datepicker();
+			$('input[name=dataAte]').datepicker();
+		});
+	</script>
+	<p><a class="btn" data-toggle="collapse" data-target="#viewdetails">Mostrar/Esconder &raquo;</a></p>
+</div>
 <hr class="divider">
 
-TODO
+<h3><?php echo $this->escapeHtml('Período selecionado:');?></h3>
+<h4><?php echo $this->escapeHtml($dataDe.' até '.$dataAte);?></h4>
+
+<br />
+
+<table class="table">
+<?php foreach($dados as $dado => $valor) { ?>
+	<tr>
+		<td><?php echo $this->escapeHtml($dado); ?></td>
+		<td><?php echo $this->escapeHtml($valor); ?></td>
+	</tr>
+<?php } ?>
+</table>
+
+<ul class="nav nav-pills">
+	<li class="active"><a href="<?php echo $this->url('relatorio', array('action'=>'index')); ?>">Voltar</a></li>
+</ul>
